Fix skills alignment

--- a/styles.css
+++ b/styles.css
@@ -56,11 +56,11 @@ footer {
   display: flex;
   justify-content: left;
   flex-wrap: wrap;
+  gap: 1rem;
 }
 .skill {
   background-color: teal;
   padding: 0.8rem;
-  margin: 1rem;
   border-radius: 0.8rem;
   color: antiquewhite;
   font-family: Arial, Helvetica, sans-serif;
